Fix `z-index` issues in `quick-repo-deletion` and `sticky-sidebar`

--- a/source/features/sticky-sidebar.css
+++ b/source/features/sticky-sidebar.css
@@ -5,12 +5,18 @@
 .rgh-sticky-sidebar {
 	position: sticky;
 	top: 0;
-	z-index: 1; /* `sticky` will trap the `fixed` dialog’s z-index in some sidebars #3732 */
+
+	/* `sticky` will trap the `fixed` dialog’s z-index in some sidebars #3732 */
+	/* Higher than sticky readme header #4192 */
+	z-index: 91;
 }
 
 #partial-discussion-sidebar.rgh-sticky-sidebar {
 	top: 76px !important; /* Sticky header's height + sidebar item's margin */
-	z-index: 1; /* Needed so the backdrop of notification modal is over the other elements in the conversation */
+
+	/* Needed so the backdrop of notification modal is over the other elements in the conversation */
+	/* Higher than sticky readme header #4192 */
+	z-index: 91;
 }
 
 /* Hides the last divider (on pull requests) to avoid https://user-images.githubusercontent.com/10238474/62282128-af6fb980-b457-11e9-8b18-c29687b88da1.gif */
